[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/power/meteor/Meteor.gd" type="Script" id=1]
[ext_resource path="res://scenes/power/meteor/assets/meteor_2.png" type="Texture" id=2]
[ext_resource path="res://scenes/power/meteor/assets/meteor_1.png" type="Texture" id=3]
[ext_resource path="res://scenes/power/meteor/assets/meteor_3.png" type="Texture" id=4]
[ext_resource path="res://scenes/power/meteor/assets/meteor_4.png" type="Texture" id=5]
[ext_resource path="res://scenes/power/meteor/assets/meteor_impact_1.png" type="Texture" id=6]
[ext_resource path="res://scenes/power/meteor/assets/meteor_impact_3.png" type="Texture" id=7]
[ext_resource path="res://scenes/power/meteor/assets/meteor_impact_4.png" type="Texture" id=8]
[ext_resource path="res://scenes/power/meteor/assets/meteor_impact_5.png" type="Texture" id=9]
[ext_resource path="res://scenes/power/meteor/assets/meteor_impact_6.png" type="Texture" id=10]
[ext_resource path="res://scenes/power/meteor/assets/particles_meteor.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "meteor_falling"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 0.965936 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "meteor_impacting"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1.41421, 1, 1, 21.8566, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 10, 0 ), Vector2( 10, -50 ), Vector2( 10, -60 ), Vector2( 10, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 25.3011
height = 0.867424

[sub_resource type="CapsuleShape2D" id=4]
radius = 51.0581

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 44.025, 10 )

[node name="Meteor" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "meteor_falling"
anims/meteor_falling = SubResource( 1 )
anims/meteor_impacting = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, -90 )
amount = 2
texture = ExtResource( 11 )
gravity = Vector2( 0, -98 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ImpactArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactArea"]
shape = SubResource( 4 )

[node name="GroundDetector" type="Area2D" parent="."]
position = Vector2( 0, 30 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
shape = SubResource( 5 )
[connection signal="body_entered" from="ImpactArea" to="." method="_on_ImpactArea_body_entered"]
[connection signal="body_entered" from="GroundDetector" to="." method="_on_GroundDetector_body_entered"]
